--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,6 @@ install:
 
 script:
   - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+
+after_success:
+  - ./travis_merge_script.sh
