--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script:
   - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
 after_success:
-  - ./travis_merge_script.sh
+  - sh travis_merge_script.sh
