--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,11 @@ install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
 after_success:
   - sh travis_merge_script.sh
+
+stage: "Deploy"
+  script:
+    - npm run build
