--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "ngx-gallery": "^5.10.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
