--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,9 @@ node_js:
 
 addons:
   chrome: stable
-#addons:
-#  apt:
-#    sources:
-#      - google-chrome
-#    packages:
-#      - google-chrome-stable
-#      - sshpass
+  apt:
+    packages:
+      - sshpass
 
 cache:
   directories:
