--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@glidejs/glide": "^3.4.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
-    "ngx-gallery": "^5.10.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
