--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@glidejs/glide": "^3.4.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "highcharts": "^7.2.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "rxjs": "~6.5.2",
