--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "highcharts": "^7.2.1",
+    "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "rxjs": "~6.5.2",
