--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@glidejs/glide": "^3.4.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "easy-pie-chart": "^2.1.7",
     "highcharts": "^7.2.1",
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
