--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "highcharts": "^7.2.1",
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
