--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@glidejs/glide": "^3.4.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "easy-pie-chart": "^2.1.7",
+    "express": "^4.17.1",
     "highcharts": "^7.2.1",
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "nodemailer": "^6.3.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
