updated environments to switch between local and prod for restful api calls, added environment alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "./",
     "paths": {
       "@core/*": ["src/app/core/*"],
+      "@env/*": ["src/environments/*"],
       "@features/*": ["src/app/features/*"],
       "@shared/*": ["src/app/shared/*"]
     },
