--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,7 @@
               "outputHashing": "all",
               "sourceMap": false,
               "extractCss": true,
+              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
