--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.2",
-    "@angular/common": "~8.2.2",
-    "@angular/compiler": "~8.2.2",
-    "@angular/core": "~8.2.2",
-    "@angular/forms": "~8.2.2",
-    "@angular/platform-browser": "~8.2.2",
-    "@angular/platform-browser-dynamic": "~8.2.2",
-    "@angular/router": "~8.2.2",
+    "@angular/animations": "~9.1.12",
+    "@angular/common": "~9.1.12",
+    "@angular/compiler": "~9.1.12",
+    "@angular/core": "~9.1.12",
+    "@angular/forms": "~9.1.12",
+    "@angular/platform-browser": "~9.1.12",
+    "@angular/platform-browser-dynamic": "~9.1.12",
+    "@angular/router": "~9.1.12",
     "@fancyapps/fancybox": "^3.5.7",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
@@ -42,19 +42,19 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "ngx-masonry": "^1.1.4",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "~6.6.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.2",
-    "@angular/cli": "~8.2.2",
-    "@angular/compiler-cli": "^8.2.2",
-    "@angular/language-service": "~8.2.2",
+    "@angular-devkit/build-angular": "~0.901.11",
+    "@angular/cli": "~9.1.11",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "~9.1.12",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "husky": "^4.2.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -69,6 +69,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
