--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 restart server.js"
+    "start": "forever server.js"
   },
   "author": "Omar Mirza",
   "license": "ISC",
@@ -13,7 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemailer": "^6.4.0",
-    "pm2": "^4.2.0"
+    "forever": "^3.0.2",
+    "nodemailer": "^6.4.0"
   }
 }
