--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 8888",
     "dev": "npm-run-all -p start server",
     "build": "ng build",
     "test": "ng test",
