add scss linting setup

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
-    "lint": "ng lint",
+    "lint": "tslint --project tsconfig.json --fix && npm run lint:styles",
+    "lint:styles": "stylelint \"src/**/*.scss\"",
     "e2e": "ng e2e",
     "server": "node backend/server.js"
   },
@@ -19,43 +20,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.3",
-    "@angular/common": "~11.0.3",
-    "@angular/compiler": "~11.0.3",
-    "@angular/core": "~11.0.3",
-    "@angular/forms": "~11.0.3",
-    "@angular/platform-browser": "~11.0.3",
-    "@angular/platform-browser-dynamic": "~11.0.3",
-    "@angular/router": "~11.0.3",
+    "@angular/animations": "^11.0.4",
+    "@angular/common": "^11.0.4",
+    "@angular/compiler": "^11.0.4",
+    "@angular/core": "^11.0.4",
+    "@angular/forms": "^11.0.4",
+    "@angular/platform-browser": "^11.0.4",
+    "@angular/platform-browser-dynamic": "^11.0.4",
+    "@angular/router": "^11.0.4",
     "@fancyapps/fancybox": "^3.5.7",
     "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-brands-svg-icons": "^5.6.3",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@glidejs/glide": "^3.4.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
+    "bootstrap": "^4.5.3",
+    "core-js": "^2.6.12",
     "easy-pie-chart": "^2.1.7",
     "highcharts": "^7.2.2",
-    "highcharts-angular": "^2.4.0",
-    "jquery": "^3.5.0",
-    "lodash": "^4.17.19",
-    "moment": "^2.24.0",
+    "highcharts-angular": "^2.8.2",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "ngx-masonry": "^1.1.4",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.3",
-    "@angular/cli": "~11.0.3",
-    "@angular/compiler-cli": "^11.0.3",
-    "@angular/language-service": "~11.0.3",
+    "@angular-devkit/build-angular": "^0.1100.4",
+    "@angular/cli": "^11.0.4",
+    "@angular/compiler-cli": "^11.0.4",
+    "@angular/language-service": "^11.0.4",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "husky": "^4.2.3",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.19.9",
+    "codelyzer": "^6.0.1",
+    "husky": "^4.3.6",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
@@ -64,11 +65,14 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.2",
-    "pretty-quick": "^2.0.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^2.0.2",
     "protractor": "~7.0.0",
+    "stylelint": "^13.8.0",
+    "stylelint-prettier": "^1.1.2",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.0.5"
   }
 }
