--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --port 8888",
     "dev": "npm-run-all -p start server",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "test": "ng test",
     "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "tslint --project tsconfig.json --fix && npm run lint:styles",
