--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
+  "endOfLine": "auto",
+  "printWidth": 100,
   "semi": true,
-  "trailingComma": "none",
-  "printWidth": 80,
+  "singleQuote": true,
   "tabWidth": 2,
-  "singleQuote": false,
-  "endOfLine": "auto"
+  "trailingComma": "none"
 }
