--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
               "src/assets",
@@ -98,9 +98,6 @@
           "options": {
             "browserTarget": "creative-developments:build"
           },
-          "stylePreprocessorOptions": {
-            "includePaths": ["src/styles"]
-          },
           "configurations": {
             "production": {
               "browserTarget": "creative-developments:build:production"
@@ -111,21 +108,6 @@
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "creative-developments:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "stylePreprocessorOptions": {
-              "includePaths": ["src/styles"]
-            },
-            "styles": ["src/styles.scss"],
-            "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
           }
         }
       }
