--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "creative-developments",
   "version": "0.0.0",
   "scripts": {
+    "prepare": "husky install",
     "ng": "ng",
     "start": "ng serve --port 8888",
     "dev": "npm-run-all -p start server",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
-    "test": "ng test",
-    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
-    "lint": "tslint --project tsconfig.json --fix && npm run lint:styles",
-    "lint:styles": "stylelint \"src/**/*.scss\"",
+    "test": "jest --verbose --coverage",
+    "lint": "tsc --noEmit",
     "e2e": "ng e2e",
     "server": "node backend/server.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run lint"
-    }
+  "lint-staged": {
+    "*.{scss,css}": [
+      "stylelint --fix"
+    ],
+    "*.{js,ts}": [
+      "eslint . --fix --max-warnings=0"
+    ],
+    "*.{js,ts,json,html,md}": [
+      "prettier --write"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -50,30 +55,32 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.4",
+    "@angular-eslint/builder": "12.3.1",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/schematics": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
     "@angular/cli": "^13.0.4",
     "@angular/compiler-cli": "^13.0.3",
     "@angular/language-service": "^13.0.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
+    "@types/jest": "^27.0.3",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.19.9",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "codelyzer": "^6.0.1",
-    "husky": "^4.3.6",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.9",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "husky": "^7.0.1",
+    "jest": "^27.4.3",
+    "jest-preset-angular": "^11.0.1",
+    "lint-staged": "^11.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^2.0.2",
+    "prettier": "^2.3.2",
     "protractor": "~7.0.0",
-    "stylelint": "^13.8.0",
-    "stylelint-prettier": "^1.1.2",
+    "stylelint": "^13.13.1",
+    "stylelint-prettier": "^1.2.0",
+    "ts-jest": "^27.1.1",
     "ts-node": "~7.0.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.4.4"
   }
 }
