fix linting warnings

--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
     "@angular/compiler-cli": "^13.0.3",
     "@angular/language-service": "^13.0.3",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.177",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.19.9",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
-    "eslint": "^7.26.0",
     "codelyzer": "^6.0.1",
+    "eslint": "^7.26.0",
     "husky": "^7.0.4",
     "jest": "^27.4.3",
     "jest-preset-angular": "^11.0.1",
