add custom types for require

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "target": "es2017",
     "module": "es2020",
     "lib": ["es2018", "dom"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
