--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "creative-developments",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "prepare": "husky install",
     "ng": "ng",
