--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 8888,
             "browserTarget": "creative-developments:build"
           },
           "configurations": {
