--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@glidejs/glide": "^3.4.1",
+    "@glidejs/glide": "^3.5.2",
     "bootstrap": "^4.5.3",
     "core-js": "^2.6.12",
     "easy-pie-chart": "^2.1.7",
@@ -63,6 +63,7 @@
     "@angular/cli": "^13.0.4",
     "@angular/compiler-cli": "^13.0.3",
     "@angular/language-service": "^13.0.3",
+    "@types/glidejs__glide": "^3.4.1",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.177",
     "@types/moment": "^2.13.0",
