fix unit test runner

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
     "types": ["jest"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "files": ["src/polyfills.ts"],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
