--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,7 +23,7 @@ jobs:
 
       # Checks-out your repository under $GITHUB_WORKSPACE,
       # so your workflow can access it
-      - uses: actions/checkout@master
+      # uses: actions/checkout@master
       # Copying files and artifacts via SSH
       - name: Copying files to server
         uses: appleboy/scp-action@master
