--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.PRIVATE_SSH_KEY }}
           # ensure destination folder on the remote server is completely cleaned before downloading new files
           rm: true
           # defines the folder, that will be uploaded to the remote server
@@ -41,3 +41,14 @@ jobs:
           # i.e, remove dist folder
           strip_components: 1
 
+      - name: start backend node server
+        uses: fifsky/ssh-action@master
+        with:
+          command: |
+            ls -a
+            cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
+            npm ci
+            npm run start
+          host: ${{ secrets.REMOTE_HOST }}
+          user: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.PRIVATE_SSH_KEY }}
