start backend node server via github actions fix

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -47,7 +47,8 @@ jobs:
           script: |
             whoami
             ls -la
-            cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
+            cd "${{ secrets.REMOTE_DIR }}"
+            cd creative-developments/backend"
             npm ci
             npm run start
           host: ${{ secrets.REMOTE_HOST }}
