attempt to run node backend server and exit

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -48,7 +48,7 @@ jobs:
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
             ls -la
             npm i
-            npm run start
+            npm run start &
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.PRIVATE_SSH_KEY }}
