--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -44,8 +44,10 @@ jobs:
       - name: start backend node server
         uses: appleboy/ssh-action@master
         with:
+          # kill node to bypass `EADDRINUSE, Address/port already in use` error
           script: |
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
+            killall -9 node
             npm i
             npm run start
             wait &
