--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -47,6 +47,7 @@ jobs:
           # kill node to bypass `EADDRINUSE, Address/port already in use` error
           script: |
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
+            killall -9 node
             npm i
             npm run start &
           host: ${{ secrets.REMOTE_HOST }}
