--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo 'Error: no test specified' && exit 1",
     "start": "forever --minUptime 10000 --spinSleepTime 10000 -c 'nodemon --exitcrash' server.js"
   },
   "author": "Omar Mirza",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "forever": "^4.0.1",
-    "nodemailer": "^6.4.0",
     "nodemon": "^2.0.15"
   }
 }
