fixed debugging info

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -52,8 +52,8 @@ jobs:
           envs: SENDGRID_API_KEY
           # kill node to bypass `EADDRINUSE, Address/port already in use` error
           script: |
-            console.log("key", $SENDGRID_API_KEY)
-            console.log("secrets.$SENDGRID_API_KEY",  "${{ secrets.$SENDGRID_API_KEY", ${{ secrets.$SENDGRID_API_KEY }} )
+            echo "key $SENDGRID_API_KEY"
+            echo "secrets.$SENDGRID_API_KEY ${{ secrets.$SENDGRID_API_KEY }}"
             export SENDGRID_API_KEY=$SENDGRID_API_KEY
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
             killall -9 node
