--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -52,7 +52,7 @@ jobs:
           envs: SENDGRID_API_KEY
           # kill node to bypass `EADDRINUSE, Address/port already in use` error
           script: |
-            echo "key $SENDGRID_API_KEY"
+            echo "key $SENDGRID_API_KEY" $SENDGRID_API_KEY
             export SENDGRID_API_KEY=$SENDGRID_API_KEY
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
             killall -9 node
