--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -62,4 +62,4 @@ jobs:
           # kill node to bypass `EADDRINUSE, Address/port already in use` error
           script: |
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
-            npm run start &
+            npm run start
