fix nodemon command

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "start": "forever --minUptime 10000 --spinSleepTime 10000 -c 'nodemon --exitcrash' server.js"
+    "start": "forever --minUptime 10000 --spinSleepTime 10000 -c 'nodemon --exitcrash' server.js",
+    "start:nodemon": "nodemon server.js"
   },
   "author": "Omar Mirza",
   "license": "ISC",
