--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -41,7 +41,7 @@ jobs:
           # i.e, remove dist folder
           strip_components: 1
 
-      - name: kill node and install backend dependencies
+      - name: kill node, install backend dependencies & start server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.REMOTE_HOST }}
@@ -52,16 +52,5 @@ jobs:
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
             killall -9 node
             npm i
-            sleep 30s
-            npm run start:nodemon
-
-#      - name: start backend node server
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.REMOTE_HOST }}
-#          username: ${{ secrets.REMOTE_USER }}
-#          key: ${{ secrets.PRIVATE_SSH_KEY }}
-#          # kill node to bypass `EADDRINUSE, Address/port already in use` error
-#          script: |
-#            cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
-#            npm run start:nodemon
+            sleep 10
+            npm run start
