increase sleep time

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -52,5 +52,5 @@ jobs:
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
             killall -9 node
             npm i
-            sleep 10
-            npm run start
+            sleep 20
+            npm run start:nodemon
