--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "start": "forever --minUptime 10000 --spinSleepTime 10000 -c 'nodemon --exitcrash' server.js",
+    "start:forever": "forever --minUptime 10000 --spinSleepTime 10000 -c 'nodemon --exitcrash' server.js",
     "start:nodemon": "nodemon server.js",
     "start:node": "node server.js"
   },
@@ -15,8 +15,10 @@
     "@sendgrid/mail": "^7.6.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "forever": "^4.0.1",
-    "nodemon": "^2.0.15"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "forever": "^4.0.1"
   }
 }
