--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "prepare": "husky install",
     "ng": "ng",
-    "start": "concurrently \"ng serve\" \"cd backend && npm run start\"",
+    "start": "concurrently \"ng serve\" \"npm run start:server\"",
+    "start:server": "cd backend && npm run start:nodemon",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "test": "jest --verbose --coverage",
