--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "start": "pm2 start nodemon server.js"
+    "start": "pm2 start -f nodemon server.js"
   },
   "author": "Omar Mirza",
   "license": "ISC",
