--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "start": "pm2 start -f nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "Omar Mirza",
   "license": "ISC",
@@ -14,7 +14,6 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15",
-    "pm2": "^5.1.2"
+    "nodemon": "^2.0.15"
   }
 }
