put back important location block to fix angular reload 404 issue

--- a/backend/creativedevelopments.net.conf
+++ b/backend/creativedevelopments.net.conf
@@ -8,4 +8,8 @@ server {
     gzip             on;
     gzip_comp_level  3;
     gzip_types       text/plain text/css application/javascript image/*;
+
+    location / {
+        try_files $uri$args $uri$args/ /index.html;
+    }
 }
