--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,7 +15,7 @@ jobs:
       - name: use Node.js
         uses: actions/setup-node@v2
       - name: install dependencies
-        run: npm i
+        run: npm ci
       - name: run tests
         run: npm run test
       - name: build app
@@ -50,6 +50,5 @@ jobs:
           # kill node to bypass `EADDRINUSE, Address/port already in use` error
           script: |
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
-            npm i
-            pm2 start server.js --name creative-developments-api || pm2 restart creative-developments-api
-            pm2 save
+            npm ci
+            npm run prod
