--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prod": "node server.js"
   },
   "author": "Omar Mirza",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
   "dependencies": {
     "@sendgrid/mail": "^7.6.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^6.4.1",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.4.1"
   }
 }
