--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,7 +15,7 @@ jobs:
       - name: use Node.js
         uses: actions/setup-node@v2
       - name: install dependencies
-        run: npm ci
+        run: npm i
       - name: run tests
         run: npm run test
       - name: build app
@@ -50,5 +50,5 @@ jobs:
           # kill node to bypass `EADDRINUSE, Address/port already in use` error
           script: |
             cd "${{ secrets.REMOTE_DIR }}/creative-developments/backend"
-            npm ci
-            npm run prod
+            npm i
+            pm2 restart creative-developments
