--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "dev": "nodemon server.js",
-    "prod": "node server.js"
+    "dev": "nodemon server.js"
   },
   "author": "Omar Mirza",
   "license": "ISC",
